--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,33 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+@layer utilities {
+  .box-shadow-light-inset {
+    box-shadow: 0 0 50px #c62368, -10px 0 80px #c62368;
   }
+}
+
+@layer base {
   body {
-    color: white;
+    overflow-x: hidden;
+  }
+
+  * {
+    @apply selection:bg-fuchsia-300 selection:text-fuchsia-900 box-border;
+  }
+
+  ::-webkit-scrollbar {
+    width: 10px;
     background: black;
+  }
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888;
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
   }
 }
